# GroupsExtension

./: CMakeLists.txt
CLI/: CMakeLists.txt
CLI/GROUPS/: Groups.cmake
CLI/GROUPS/src/: GroupwiseRegistration.cpp
CLI/GROUPS/wrapper/: CMakeLists.txt
Groups/: CMakeLists.txt  Groups.py
